Fixed overflow lock

--- a/public/index.css
+++ b/public/index.css
@@ -1,7 +1,3 @@
-* {
-    overflow-x: hidden;
-}
-
 body {
     margin: 0px;
     overflow-x: hidden;
